--- a/train_validation_split.ipynb
+++ b/train_validation_split.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -16,10 +16,7 @@
     }
    ],
    "source": [
-    "import tensorflow as tf\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import shutil\n",
     "import math\n",
@@ -50,10 +47,9 @@
     "        \n",
     "    src_path += values[i][1] + '/'\n",
     "    dst_path += values[i][1] + '/'\n",
-    "#     print('src_path:',src_path)\n",
-    "#     print('dst_path:',dst_path)\n",
+    "\n",
     "    if not os.path.exists(src_path):\n",
-    "        print('src_apth does not exits!')\n",
+    "        print('src_path does not exits!')\n",
     "        break\n",
     "       \n",
     "    if not os.path.exists(dst_path):\n",
@@ -61,44 +57,20 @@
     "        \n",
     "    src_file_name = src_path + values[i][2]\n",
     "    dst_file_name = dst_path + values[i][2]\n",
-    "#     print('src_file_name:',src_file_name)\n",
-    "#     print('dst_file_name:',dst_file_name)\n",
+    "\n",
     "    shutil.move(src_file_name,dst_file_name)\n",
     "    src_path = './train' + '/'\n",
     "    dst_path = './validation' + '/'\n",
     "print(cnt)\n",
-    "print('complete!')\n",
-    "\n",
-    "\n",
-    "# print(df['subject'][0] == subject[0])\n",
-    "# print(subject)\n",
-    "# print(classname)\n",
-    "\n",
-    "# path = './train' + '/' + df['classname'][1000]\n",
-    "# if not os.path.exists(path):\n",
-    "#     os.makedirs(path)\n",
-    "    \n",
-    "# file_name = path + '/' + df['img'][1000]\n",
-    "# shutil.move('./train/test.jpg',file_name)\n",
-    "\n"
+    "print('complete!')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(math.floor(num_of_driver * 0.2))"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
