--- a/distracted_driver_detection.ipynb
+++ b/distracted_driver_detection.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -19,7 +21,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from keras.models import Sequential\n",
@@ -57,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -102,6 +106,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "nb_train_samples = 18047\n",
+    "nb_val_samples = 4377"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -112,8 +126,18 @@
       "Epoch 2/3\n",
       "1127/1127 [==============================] - 3818s 3s/step - loss: 1.2567 - acc: 0.5433 - val_loss: 2.7569 - val_acc: 0.3210\n",
       "Epoch 3/3\n",
-      " 258/1127 [=====>........................] - ETA: 48:42 - loss: 1.0378 - acc: 0.6289"
+      "1127/1127 [==============================] - 3941s 3s/step - loss: 0.9579 - acc: 0.6594 - val_loss: 3.0042 - val_acc: 0.3346\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f9dd81139e8>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -121,11 +145,129 @@
     "\n",
     "model = build_simple_convnet()\n",
     "model.fit_generator(train_generator,\n",
-    "                    steps_per_epoch=18047 // batch_size,\n",
+    "                    steps_per_epoch=nb_train_samples // batch_size,\n",
     "                    epochs=3,\n",
     "                    callbacks=[TensorBoard()],\n",
     "                    validation_data=validation_generator,\n",
-    "                    validation_steps=4377 // batch_size)"
+    "                    validation_steps=nb_val_samples // batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import h5py\n",
+    "model.save_weights('simple_cnn_weights.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 input_23\n",
+      "1 block1_conv1\n",
+      "2 block1_conv2\n",
+      "3 block1_pool\n",
+      "4 block2_conv1\n",
+      "5 block2_conv2\n",
+      "6 block2_pool\n",
+      "7 block3_conv1\n",
+      "8 block3_conv2\n",
+      "9 block3_conv3\n",
+      "10 block3_pool\n",
+      "11 block4_conv1\n",
+      "12 block4_conv2\n",
+      "13 block4_conv3\n",
+      "14 block4_pool\n",
+      "15 block5_conv1\n",
+      "16 block5_conv2\n",
+      "17 block5_conv3\n",
+      "18 block5_pool\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "The shape of the input to \"Flatten\" is not fully defined (got (None, None, 512). Make sure to pass a complete \"input_shape\" or \"batch_input_shape\" argument to the first layer in your model.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-52c360cb00b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0mtop_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSequential\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;31m# flateen the output of VGG16 model to 2D Numpy matrix (n*D)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m \u001b[0mtop_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mFlatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_shape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput_shape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m \u001b[0;31m# hidden layer of 256 neurons\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0mtop_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDense\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m256\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactivation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'relu'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.conda/envs/py3/lib/python3.6/site-packages/keras/models.py\u001b[0m in \u001b[0;36madd\u001b[0;34m(self, layer)\u001b[0m\n\u001b[1;32m    465\u001b[0m                 \u001b[0;31m# and create the node connecting the current layer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    466\u001b[0m                 \u001b[0;31m# to the input layer we just created.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 467\u001b[0;31m                 \u001b[0mlayer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    468\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    469\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlayer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_inbound_nodes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput_tensors\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.conda/envs/py3/lib/python3.6/site-packages/keras/engine/topology.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, inputs, **kwargs)\u001b[0m\n\u001b[1;32m    634\u001b[0m             \u001b[0;31m# Inferring the output shape is only relevant for Theano.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    635\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0m_to_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_shape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 636\u001b[0;31m                 \u001b[0moutput_shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_output_shape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_shape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    637\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    638\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_shape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.conda/envs/py3/lib/python3.6/site-packages/keras/layers/core.py\u001b[0m in \u001b[0;36mcompute_output_shape\u001b[0;34m(self, input_shape)\u001b[0m\n\u001b[1;32m    488\u001b[0m             raise ValueError('The shape of the input to \"Flatten\" '\n\u001b[1;32m    489\u001b[0m                              \u001b[0;34m'is not fully defined '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 490\u001b[0;31m                              \u001b[0;34m'(got '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_shape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'. '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    491\u001b[0m                              \u001b[0;34m'Make sure to pass a complete \"input_shape\" '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    492\u001b[0m                              \u001b[0;34m'or \"batch_input_shape\" argument to the first '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: The shape of the input to \"Flatten\" is not fully defined (got (None, None, 512). Make sure to pass a complete \"input_shape\" or \"batch_input_shape\" argument to the first layer in your model."
+     ]
+    }
+   ],
+   "source": [
+    "from keras.applications.vgg16 import VGG16\n",
+    "from keras.models import Sequential,Model\n",
+    "from keras.layers import Flatten,Dense,Activation,Dropout\n",
+    "\n",
+    "base_model = VGG16(weights='imagenet', include_top=False)\n",
+    "# vgg16_model = VGG16(weights=None, include_top=True)\n",
+    "\n",
+    "# x = base_model.output\n",
+    "# x = Dense(256,activation='relu')(x)\n",
+    "# x = Dropout(0.5)(x)\n",
+    "# top_model = base_model.output\n",
+    "# top_model = Dense(256,activation='relu')(top_model)\n",
+    "# top_model= Dropout(0.5)(top_model)\n",
+    "# top_model = Dense(256,activation='relu')(top_model)\n",
+    "# top_model= Dropout(0.5)(top_model)\n",
+    "# pred = Dense(10,activation='softmax')(top_model)\n",
+    "# vgg16_model = Model(inputs=base_model.input, outputs=pred)\n",
+    "# vgg16_model.summary()\n",
+    "\n",
+    "# x = Sequential()\n",
+    "\n",
+    "# for i,layer in enumerate(base_model.layers):\n",
+    "#     if i>18:break\n",
+    "#     x.add(layer)\n",
+    "#     print(i,layer.name)\n",
+    "\n",
+    "\n",
+    "# top_model = Sequential()\n",
+    "# top_model.add(Flatten(input_shape=base_model.output_shape[1:]))\n",
+    "# top_model.add(Dense(256, activation='relu'))\n",
+    "# top_model.add(Dropout(0.5))\n",
+    "# top_model.add(Dense(10, activation='softmax'))\n",
+    "x = base_model.output\n",
+    "x = Flatten(input_shape=base_model.output_shape[1:])(x)\n",
+    "x = Dense(256, activation='relu')(x)\n",
+    "x = Dropout(0.5)(x)\n",
+    "predictions = Dense(10, activation='softmax')(x)\n",
+    "\n",
+    "vgg16_model = Model(inputs=base_model.input, outputs=predictions)\n",
+    "vgg16_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "vgg16_model.compile(optimizer='rmsprop', loss='categorical_crossentropy',metrics=['accuracy'])\n",
+    "vgg16_model.fit_generator(train_generator,\n",
+    "                    steps_per_epoch=nb_train_samples // batch_size,\n",
+    "                    epochs=10,\n",
+    "                    callbacks=[TensorBoard()],\n",
+    "                    validation_data=validation_generator,\n",
+    "                    validation_steps=nb_val_samples // batch_size)\n",
+    "vgg16_model.save_weights('vgg16_fc_weights.h5')"
    ]
   },
   {
@@ -133,7 +275,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from keras.optimizers import SGD\n",
+    "for layer in vgg16_model.layers[:25]:\n",
+    "    layer.trainable = False\n",
+    "\n",
+    "vgg16_model.compile(optimizer=SGD(lr=1e-4,momentum=0.9), loss='categorical_crossentropy',metrics=['accuracy'])\n",
+    "vgg16_model.fit_generator(train_generator,\n",
+    "                    steps_per_epoch=nb_train_samples // batch_size,\n",
+    "                    epochs=10,\n",
+    "                    callbacks=[TensorBoard()],\n",
+    "                    validation_data=validation_generator,\n",
+    "                    validation_steps=nb_val_samples // batch_size)\n",
+    "\n",
+    "vgg16_model.save_weights('vgg16_fine_tuning_weights.h5')"
+   ]
   }
  ],
  "metadata": {
