modified some code

--- a/distracted_driver_detection.ipynb
+++ b/distracted_driver_detection.ipynb
@@ -105,7 +105,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_train_samples = 18047\n",
@@ -260,6 +262,9 @@
    },
    "outputs": [],
    "source": [
+    "for layer in vgg16_model.layers[:25]:\n",
+    "    layer.trainable = False\n",
+    "    \n",
     "vgg16_model.compile(optimizer='rmsprop', loss='categorical_crossentropy',metrics=['accuracy'])\n",
     "vgg16_model.fit_generator(train_generator,\n",
     "                    steps_per_epoch=nb_train_samples // batch_size,\n",
@@ -273,12 +278,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from keras.optimizers import SGD\n",
-    "for layer in vgg16_model.layers[:25]:\n",
-    "    layer.trainable = False\n",
+    "\n",
+    "for layer in vgg16_model.layers[15:25]:\n",
+    "    layer.trainable = True\n",
     "\n",
     "vgg16_model.compile(optimizer=SGD(lr=1e-4,momentum=0.9), loss='categorical_crossentropy',metrics=['accuracy'])\n",
     "vgg16_model.fit_generator(train_generator,\n",
