--- a/distracted_driver_detection.ipynb
+++ b/distracted_driver_detection.ipynb
@@ -2,20 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "from keras.models import Sequential,Model\n",
+    "from keras.layers import Conv2D,MaxPool2D\n",
+    "from keras.layers import Activation,Dropout,Flatten,Dense\n",
+    "from keras.optimizers import RMSprop,SGD\n",
+    "from keras.preprocessing import image\n",
+    "from keras.callbacks import TensorBoard,History,EarlyStopping,CSVLogger\n",
+    "from keras.applications.vgg16 import VGG16\n",
+    "import h5py\n",
     "import os\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "train_path = './train'\n",
     "validation_path = './validation'\n",
     "test_path = './test'\n",
     "assert(os.path.exists(train_path))\n",
     "assert(os.path.exists(validation_path))\n",
-    "assert(os.path.exists(test_path))\n"
+    "assert(os.path.exists(test_path))\n",
+    "\n",
+    "nb_train_samples = 18047\n",
+    "nb_val_samples = 4377\n",
+    "image_size = (224,224)\n",
+    "batch_size = 128\n",
+    "class_num = 10"
    ]
   },
   {
@@ -26,12 +46,7 @@
    },
    "outputs": [],
    "source": [
-    "from keras.models import Sequential\n",
-    "from keras.layers import Conv2D,MaxPool2D\n",
-    "from keras.layers import Activation,Dropout,Flatten,Dense\n",
-    "from keras.optimizers import RMSprop\n",
-    "\n",
-    "def build_simple_convnet(input_shape=(224,224,3),class_num=10):\n",
+    "def build_simple_convnet(input_shape=(224,224,3),class_num=class_num):\n",
     "    \n",
     "    model = Sequential()\n",
     "    model.add(Conv2D(32,(3,3),input_shape=input_shape))\n",
@@ -53,10 +68,29 @@
     "    model.add(Dense(class_num))\n",
     "    model.add(Activation('softmax'))\n",
     "    \n",
-    "#     rmsprop = RMSprop(lr=10e-3)\n",
     "    model.compile(loss='categorical_crossentropy',optimizer='adam',metrics=['accuracy'])\n",
     "    \n",
     "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_batches_data(dir_path, \n",
+    "                    gen=image.ImageDataGenerator(), \n",
+    "                    target_size=(224,224), \n",
+    "                    batch_size=32, \n",
+    "                    class_mode='categorical', \n",
+    "                    shuffle=False):\n",
+    "    \n",
+    "    return gen.flow_from_directory(dir_path, \n",
+    "                                   target_size=target_size, \n",
+    "                                   batch_size=batch_size,\n",
+    "                                   class_mode=class_mode, \n",
+    "                                   shuffle=shuffle)"
    ]
   },
   {
@@ -74,7 +108,6 @@
     }
    ],
    "source": [
-    "from keras.preprocessing import image\n",
     "\n",
     "train_datagen = image.ImageDataGenerator(rescale=1./255,\n",
     "                                         shear_range=0.2,\n",
@@ -84,22 +117,27 @@
     "                                         channel_shift_range=5,\n",
     "                                         horizontal_flip=True,\n",
     "                                         fill_mode='nearest')\n",
+    "\n",
     "validation_datagen = image.ImageDataGenerator(rescale=1./255)\n",
     "\n",
-    "batch_size = 16\n",
-    "train_generator = train_datagen.flow_from_directory(\n",
-    "                                    train_path,\n",
-    "                                    target_size=(224,224),\n",
-    "                                    batch_size=batch_size,\n",
-    "                                    shuffle=True,\n",
-    "                                    class_mode='categorical')\n",
+    "# test_datagen = image.ImageDataGenerator(rescale=1./255)\n",
     "\n",
-    "validation_generator = validation_datagen.flow_from_directory(\n",
-    "                                    validation_path,\n",
-    "                                    target_size=(224,224),\n",
+    "\n",
+    "train_generator = generate_batches_data(\n",
+    "                                    dir_path=train_path,\n",
+    "                                    gen=train_datagen,\n",
+    "                                    target_size=image_size,\n",
     "                                    batch_size=batch_size,\n",
-    "                                    shuffle=False,\n",
-    "                                    class_mode='categorical')\n"
+    "                                    class_mode='categorical',\n",
+    "                                    shuffle=True)\n",
+    "\n",
+    "validation_generator = generate_batches_data(\n",
+    "                                    dir_path=validation_path,\n",
+    "                                    gen=validation_datagen,\n",
+    "                                    target_size=image_size,\n",
+    "                                    batch_size=batch_size,                                    \n",
+    "                                    class_mode='categorical',\n",
+    "                                    shuffle=False)\n"
    ]
   },
   {
@@ -109,10 +147,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "nb_train_samples = 18047\n",
-    "nb_val_samples = 4377"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -143,26 +178,14 @@
     }
    ],
    "source": [
-    "from keras.callbacks import TensorBoard\n",
-    "\n",
     "model = build_simple_convnet()\n",
     "model.fit_generator(train_generator,\n",
     "                    steps_per_epoch=nb_train_samples // batch_size,\n",
-    "                    epochs=3,\n",
+    "                    epochs=10,\n",
     "                    callbacks=[TensorBoard()],\n",
     "                    validation_data=validation_generator,\n",
-    "                    validation_steps=nb_val_samples // batch_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import h5py\n",
+    "                    validation_steps=nb_val_samples // batch_size)\n",
+    "\n",
     "model.save_weights('simple_cnn_weights.h5')"
    ]
   },
@@ -212,10 +235,7 @@
     }
    ],
    "source": [
-    "from keras.applications.vgg16 import VGG16\n",
-    "from keras.models import Sequential,Model\n",
-    "from keras.layers import Flatten,Dense,Activation,Dropout\n",
-    "\n",
+    "#load VGG16 model\n",
     "base_model = VGG16(weights='imagenet', include_top=False)\n",
     "# vgg16_model = VGG16(weights=None, include_top=True)\n",
     "\n",
@@ -248,7 +268,7 @@
     "x = Flatten(input_shape=base_model.output_shape[1:])(x)\n",
     "x = Dense(256, activation='relu')(x)\n",
     "x = Dropout(0.5)(x)\n",
-    "predictions = Dense(10, activation='softmax')(x)\n",
+    "predictions = Dense(class_num, activation='softmax')(x)\n",
     "\n",
     "vgg16_model = Model(inputs=base_model.input, outputs=predictions)\n",
     "vgg16_model.summary()"
@@ -283,8 +303,6 @@
    },
    "outputs": [],
    "source": [
-    "from keras.optimizers import SGD\n",
-    "\n",
     "for layer in vgg16_model.layers[15:25]:\n",
     "    layer.trainable = True\n",
     "\n",
