--- a/distracted_driver_detection.ipynb
+++ b/distracted_driver_detection.ipynb
@@ -2,27 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n",
-      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/matplotlib/__init__.py:962: UserWarning: Duplicate key in file \"/home/ubuntu/.config/matplotlib/matplotlibrc\", line #2\n",
-      "  (fname, cnt))\n",
-      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/matplotlib/__init__.py:962: UserWarning: Duplicate key in file \"/home/ubuntu/.config/matplotlib/matplotlibrc\", line #3\n",
-      "  (fname, cnt))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from keras.models import Sequential,Model\n",
-    "from keras.layers import Conv2D,MaxPool2D\n",
-    "from keras.layers import Activation,Dropout,Flatten,Dense\n",
+    "from keras.models import *\n",
+    "from keras.layers import *\n",
     "from keras.optimizers import RMSprop,SGD\n",
     "from keras.preprocessing import image\n",
     "from keras.callbacks import TensorBoard,History,EarlyStopping,CSVLogger\n",
@@ -303,44 +288,88 @@
    ],
    "source": [
     "#load VGG16 model\n",
-    "base_model = VGG16(weights='imagenet', include_top=True)\n",
-    "base_model.summary()\n",
-    "# vgg16_model = VGG16(weights=None, include_top=True)\n",
+    "vgg16_base_model = VGG16(weights='imagenet', include_top=False)\n",
+    "vgg16_base_model.summary()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datagen = image.ImageDataGenerator(rescale=1./255)\n",
+    "train_generator = generate_batches_data(\n",
+    "                                    dir_path=train_path,\n",
+    "                                    gen=datagen,\n",
+    "                                    target_size=image_size,\n",
+    "                                    batch_size=batch_size,\n",
+    "                                    class_mode='categorical',\n",
+    "                                    shuffle=False)\n",
     "\n",
-    "# x = base_model.output\n",
-    "# x = Dense(256,activation='relu')(x)\n",
-    "# x = Dropout(0.5)(x)\n",
-    "# top_model = base_model.output\n",
-    "# top_model = Dense(256,activation='relu')(top_model)\n",
-    "# top_model= Dropout(0.5)(top_model)\n",
-    "# top_model = Dense(256,activation='relu')(top_model)\n",
-    "# top_model= Dropout(0.5)(top_model)\n",
-    "# pred = Dense(10,activation='softmax')(top_model)\n",
-    "# vgg16_model = Model(inputs=base_model.input, outputs=pred)\n",
-    "# vgg16_model.summary()\n",
+    "validation_generator = generate_batches_data(\n",
+    "                                    dir_path=validation_path,\n",
+    "                                    gen=validation_datagen,\n",
+    "                                    target_size=image_size,\n",
+    "                                    batch_size=batch_size,                                    \n",
+    "                                    class_mode='categorical',\n",
+    "                                    shuffle=False)\n",
     "\n",
-    "# x = Sequential()\n",
+    "#get the lables\n",
+    "train_labels = train_generator.classes\n",
+    "validation_labels = validation_generator.classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save the train bottleneck features\n",
+    "vgg16_bottleneck_features_train = vgg16_base_model.predict_generator(train_generator, \n",
+    "                                                          nb_train_samples // batch_size)\n",
+    "np.save(open('vgg16_bottleneck_features_train.npy', 'w'),\n",
+    "        vgg16_bottleneck_features_train)\n",
     "\n",
-    "# for i,layer in enumerate(base_model.layers):\n",
-    "#     if i>18:break\n",
-    "#     x.add(layer)\n",
-    "#     print(i,layer.name)\n",
+    "#save the validation bottleneck features\n",
+    "vgg16_bottleneck_features_validation = vgg16_base_model.predict_generator(validation_generator, \n",
+    "                                                               nb_val_samples // batch_size)\n",
+    "np.save(open('vgg16_bottleneck_features_validation.npy', 'w'),\n",
+    "        vgg16_bottleneck_features_validation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#train the top model\n",
+    "train_data = np.load(open('vgg16_bottleneck_features_train.npy'))\n",
+    "validation_data = np.load(open('vgg16_bottleneck_features_validation.npy'))\n",
     "\n",
+    "top_model = Sequential()\n",
+    "top_model.add(Flatten(input_shape=train_data.shape[1:]))\n",
+    "top_model.add(Dense(256, activation='relu'))\n",
+    "top_model.add(Dropout(0.5))\n",
+    "top_model.add(Dense(class_num, activation='softmax'))\n",
     "\n",
-    "# top_model = Sequential()\n",
-    "# top_model.add(Flatten(input_shape=base_model.output_shape[1:]))\n",
-    "# top_model.add(Dense(256, activation='relu'))\n",
-    "# top_model.add(Dropout(0.5))\n",
-    "# top_model.add(Dense(10, activation='softmax'))\n",
+    "top_model.compile(optimizer='rmsprop',loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
-    "# x = base_model.output\n",
-    "# x = Flatten(input_shape=base_model.output_shape[1:])(x)\n",
-    "# x = Dense(256, activation='relu')(x)\n",
-    "# x = Dropout(0.5)(x)\n",
-    "# predictions = Dense(class_num, activation='softmax')(x)\n",
-    "\n",
-    "# vgg16_model = Model(inputs=base_model.input, outputs=predictions)\n",
-    "# vgg16_model.summary()"
+    "top_model.fit(train_data, train_labels,\n",
+    "              epochs=50,\n",
+    "              batch_size=batch_size,\n",
+    "              validation_data=(validation_data, validation_labels),\n",
+    "              shuffle=False)\n",
+    "top_model.save_weights('vgg16_top_model_fc.h5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### checkpoint"
    ]
   },
   {
@@ -351,17 +380,72 @@
    },
    "outputs": [],
    "source": [
-    "for layer in vgg16_model.layers[:25]:\n",
+    "vgg16_model = VGG16(weights='imagenet', include_top=False)\n",
+    "\n",
+    "top_model = Sequential()\n",
+    "top_model.add(Flatten(input_shape=vgg16_model.output_shape[1:]))\n",
+    "top_model.add(Dense(256, activation='relu'))\n",
+    "top_model.add(Dropout(0.5))\n",
+    "top_model.add(Dense(class_num, activation='softmax'))\n",
+    "top_model.load_weights('vgg16_top_model_fc.h5')\n",
+    "\n",
+    "vgg16_model.add(top_model)\n",
+    "vgg16_model.summary()\n",
+    "for i,layer in enumerate(vgg16_model.layers):\n",
+    "    print(i,layer.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "train_datagen = image.ImageDataGenerator(rescale=1./255,\n",
+    "                                         shear_range=0.2,\n",
+    "                                         rotation_range=10,\n",
+    "                                         height_shift_range=0.1,\n",
+    "                                         width_shift_range=0.1,\n",
+    "                                         channel_shift_range=5,\n",
+    "                                         horizontal_flip=True,\n",
+    "                                         fill_mode='nearest')\n",
+    "\n",
+    "validation_datagen = image.ImageDataGenerator(rescale=1./255)\n",
+    "\n",
+    "\n",
+    "train_generator = generate_batches_data(\n",
+    "                                    dir_path=train_path,\n",
+    "                                    gen=train_datagen,\n",
+    "                                    target_size=image_size,\n",
+    "                                    batch_size=batch_size,\n",
+    "                                    class_mode='categorical',\n",
+    "                                    shuffle=True)\n",
+    "\n",
+    "validation_generator = generate_batches_data(\n",
+    "                                    dir_path=validation_path,\n",
+    "                                    gen=validation_datagen,\n",
+    "                                    target_size=image_size,\n",
+    "                                    batch_size=batch_size,                                    \n",
+    "                                    class_mode='categorical',\n",
+    "                                    shuffle=False)\n",
+    "\n",
+    "#frozen the first 15 layers of vgg16\n",
+    "for layer in vgg16_model.layers[:15]:\n",
     "    layer.trainable = False\n",
     "    \n",
-    "vgg16_model.compile(optimizer='rmsprop', loss='categorical_crossentropy',metrics=['accuracy'])\n",
-    "vgg16_model.fit_generator(train_generator,\n",
-    "                    steps_per_epoch=nb_train_samples // batch_size,\n",
-    "                    epochs=10,\n",
-    "                    callbacks=[TensorBoard()],\n",
-    "                    validation_data=validation_generator,\n",
-    "                    validation_steps=nb_val_samples // batch_size)\n",
-    "vgg16_model.save_weights('vgg16_fc_weights.h5')"
+    "vgg16_model.compile(loss='categorical_crossentropy',\n",
+    "                      optimizer=optimizers.SGD(lr=1e-4, momentum=0.9),\n",
+    "                      metrics=['accuracy'])\n",
+    "\n",
+    "# fine-tune the model\n",
+    "vgg16_model.fit_generator(\n",
+    "                        train_generator,\n",
+    "                        samples_per_epoch=nb_train_samples // batch_size,\n",
+    "                        epochs=50,\n",
+    "                        validation_data=validation_generator,\n",
+    "                        nb_val_samples=nb_validation_samples // batch_size,\n",
+    "                        callbacks=[TensorBoard(log_dir='./logs/vgg16_fine_tune'),CSVLogger('vgg16_fine_tune')])"
    ]
   },
   {
@@ -372,24 +456,25 @@
    },
    "outputs": [],
    "source": [
-    "for layer in vgg16_model.layers[15:25]:\n",
-    "    layer.trainable = True\n",
+    "# for layer in vgg16_model.layers[15:25]:\n",
+    "#     layer.trainable = True\n",
     "\n",
-    "vgg16_model.compile(optimizer=SGD(lr=1e-4,momentum=0.9), loss='categorical_crossentropy',metrics=['accuracy'])\n",
-    "vgg16_model.fit_generator(train_generator,\n",
-    "                    steps_per_epoch=nb_train_samples // batch_size,\n",
-    "                    epochs=10,\n",
-    "                    callbacks=[TensorBoard()],\n",
-    "                    validation_data=validation_generator,\n",
-    "                    validation_steps=nb_val_samples // batch_size)\n",
+    "# vgg16_model.compile(optimizer=SGD(lr=1e-4,momentum=0.9), loss='categorical_crossentropy',metrics=['accuracy'])\n",
+    "# vgg16_model.fit_generator(train_generator,\n",
+    "#                     steps_per_epoch=nb_train_samples // batch_size,\n",
+    "#                     epochs=50,\n",
+    "#                     callbacks=[TensorBoard()],\n",
+    "#                     validation_data=validation_generator,\n",
+    "#                     validation_steps=nb_val_samples // batch_size,\n",
+    "#                     callbacks=[TensorBoard(log_dir='./logs/vgg16_fine_tune'),CSVLogger('vgg16_fine_tune')])\n",
     "\n",
-    "vgg16_model.save_weights('vgg16_fine_tuning_weights.h5')"
+    "# vgg16_model.save_weights('vgg16_fine_tuning_weights.h5')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -403,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
