--- a/distracted_driver_detection.ipynb
+++ b/distracted_driver_detection.ipynb
@@ -121,6 +121,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def one_hot_encode(x):\n",
+    "    \"\"\"\n",
+    "    One hot encode a list of sample labels. Return a one-hot encoded vector for each label.\n",
+    "    : x: List of sample Labels\n",
+    "    : return: Numpy array of one-hot encoded labels\n",
+    "    \"\"\"     \n",
+    "    return np.eye(10)[x]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### try a simple CNN"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -254,6 +276,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### try vgg16 model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -316,21 +345,6 @@
     "#load VGG16 model\n",
     "vgg16_base_model = VGG16(weights='imagenet', include_top=False)\n",
     "vgg16_base_model.summary()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def one_hot_encode(x):\n",
-    "    \"\"\"\n",
-    "    One hot encode a list of sample labels. Return a one-hot encoded vector for each label.\n",
-    "    : x: List of sample Labels\n",
-    "    : return: Numpy array of one-hot encoded labels\n",
-    "    \"\"\"     \n",
-    "    return np.eye(10)[x]"
    ]
   },
   {
@@ -586,7 +600,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -600,7 +614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
