--- a/distracted_driver_detection.ipynb
+++ b/distracted_driver_detection.ipynb
@@ -60,24 +60,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_simple_convnet(input_shape=(224,224,3),class_num=class_num):\n",
+    "def build_simple_convnet(input_shape=(224,224,3),class_num=10):\n",
     "    \n",
     "    model = Sequential()\n",
-    "    model.add(Conv2D(32,(3,3),input_shape=input_shape,padding='valid',activation='relu'))\n",
-    "    model.add(MaxPool2D())\n",
+    "#     model.add(Conv2D(32,(3,3),input_shape=input_shape,padding='valid',activation='relu'))\n",
+    "#     model.add(MaxPool2D())\n",
     "    \n",
-    "    model.add(Conv2D(32,(3,3),activation='relu'))\n",
-    "    model.add(MaxPool2D())\n",
+    "#     model.add(Conv2D(32,(3,3),activation='relu'))\n",
+    "#     model.add(MaxPool2D())\n",
     "    \n",
-    "    model.add(Conv2D(64,(3,3),activation='relu'))\n",
-    "    model.add(MaxPool2D()) \n",
+    "#     model.add(Conv2D(64,(3,3),activation='relu'))\n",
+    "#     model.add(MaxPool2D()) \n",
     "    \n",
+    "#     model.add(Flatten())\n",
+    "#     model.add(Dense(256,activation='relu'))\n",
+    "#     model.add(Dropout(0.5))\n",
+    "#     model.add(Dense(class_num,activation='softmax'))\n",
+    "    \n",
+    "#     model.compile(loss='categorical_crossentropy',optimizer='adam',metrics=['accuracy'])\n",
+    "    \n",
+    "    model.add(Conv2D(32, (3, 3), activation='relu', input_shape=input_shape))\n",
+    "    model.add(Conv2D(32, (3, 3), activation='relu'))\n",
+    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "    model.add(Dropout(0.25))\n",
+    "\n",
+    "    model.add(Conv2D(64, (3, 3), activation='relu'))\n",
+    "    model.add(Conv2D(64, (3, 3), activation='relu'))\n",
+    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "    model.add(Dropout(0.25))\n",
+    "\n",
     "    model.add(Flatten())\n",
-    "    model.add(Dense(256,activation='relu'))\n",
+    "    model.add(Dense(256, activation='relu'))\n",
     "    model.add(Dropout(0.5))\n",
-    "    model.add(Dense(class_num,activation='softmax'))\n",
-    "    \n",
-    "    model.compile(loss='categorical_crossentropy',optimizer='adam',metrics=['accuracy'])\n",
+    "    model.add(Dense(class_num, activation='softmax'))\n",
+    "\n",
+    "    sgd = SGD(lr=0.01, decay=1e-6, momentum=0.9, nesterov=True)\n",
+    "    model.compile(loss='categorical_crossentropy', optimizer=sgd)\n",
     "    \n",
     "    return model"
    ]
@@ -148,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model_test(model,csv='sample_submission.csv'):\n",
+    "def test_model(model,csv='sample_submission.csv'):\n",
     "    columns = ['img', 'c0', 'c1', 'c2', 'c3', 'c4', 'c5', 'c6', 'c7', 'c8', 'c9']\n",
     "    df = pd.DataFrame(columns=columns)\n",
     "    \n",
@@ -164,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### try a simple CNN"
+    "### try a simple CNN model"
    ]
   },
   {
@@ -437,8 +455,7 @@
     "\n",
     "train_labels = one_hot_encode(train_generator.classes[:nb_train_labels])\n",
     "validation_labels = one_hot_encode(validation_generator.classes[:nb_val_labels])\n",
-    "# train_labels = one_hot_encode(train_generator.classes)\n",
-    "# validation_labels = one_hot_encode(validation_generator.classes)\n",
+    "\n",
     "print(len(train_labels))\n",
     "print(len(validation_labels))"
    ]
@@ -579,11 +596,10 @@
    ],
    "source": [
     "#train the top model\n",
-    "\n",
-    "\n",
     "train_data = np.load(open('vgg16_bottleneck_features_train.npy','rb'))\n",
     "validation_data = np.load(open('vgg16_bottleneck_features_validation.npy','rb'))\n",
     "\n",
+    "#we should shuffle the train data before training\n",
     "train_data,train_labels = shuffle(train_data,train_labels)\n",
     "\n",
     "top_model = Sequential()\n",
@@ -600,49 +616,6 @@
     "              validation_data=(validation_data, validation_labels),\n",
     "              shuffle=False)\n",
     "top_model.save_weights('vgg16_top_model_fc.h5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(None, None, None, 512)\n",
-      "0 input_5\n",
-      "1 block1_conv1\n",
-      "2 block1_conv2\n",
-      "3 block1_pool\n",
-      "4 block2_conv1\n",
-      "5 block2_conv2\n",
-      "6 block2_pool\n",
-      "7 block3_conv1\n",
-      "8 block3_conv2\n",
-      "9 block3_conv3\n",
-      "10 block3_pool\n",
-      "11 block4_conv1\n",
-      "12 block4_conv2\n",
-      "13 block4_conv3\n",
-      "14 block4_pool\n",
-      "15 block5_conv1\n",
-      "16 block5_conv2\n",
-      "17 block5_conv3\n",
-      "18 block5_pool\n",
-      "19 flatten\n",
-      "20 fc1\n",
-      "21 fc2\n",
-      "22 predictions\n"
-     ]
-    }
-   ],
-   "source": [
-    "vgg16_model = VGG16(weights='imagenet', include_top=True)\n",
-    "print(vgg16_base_model.output_shape)\n",
-    "for i,layer in enumerate(vgg16_model.layers):\n",
-    "    print(i,layer.name)"
    ]
   },
   {
@@ -670,7 +643,11 @@
     }
    ],
    "source": [
-    "vgg16_model = VGG16(weights='imagenet', include_top=False)\n",
+    "vgg16_base_model = VGG16(weights='imagenet', include_top=False)\n",
+    "\n",
+    "vgg16_model = Sequential()\n",
+    "for layer in vgg16_base_model.layers:\n",
+    "    vgg16_model.add(layer)\n",
     "\n",
     "top_model = Sequential()\n",
     "top_model.add(Flatten(input_shape=vgg16_model.output_shape[1:]))\n",
@@ -720,8 +697,8 @@
     "                                    class_mode='categorical',\n",
     "                                    shuffle=False)\n",
     "\n",
-    "#frozen the first 15 layers of vgg16\n",
-    "for layer in vgg16_model.layers[:15]:\n",
+    "#frozen the first 18 layers of vgg16\n",
+    "for layer in vgg16_model.layers[:18]:\n",
     "    layer.trainable = False\n",
     "    \n",
     "vgg16_model.compile(loss='categorical_crossentropy',\n",
@@ -735,7 +712,9 @@
     "                        epochs=50,\n",
     "                        validation_data=validation_generator,\n",
     "                        nb_val_samples=nb_validation_samples // batch_size,\n",
-    "                        callbacks=[TensorBoard(log_dir='./logs/vgg16_fine_tune'),CSVLogger('vgg16_fine_tune')])"
+    "                        callbacks=[TensorBoard(log_dir='./logs/vgg16_fine_tune'),\n",
+    "                                   CSVLogger('vgg16_fine_tune'),\n",
+    "                                   EarlyStopping(patience=3)])"
    ]
   },
   {
@@ -746,19 +725,22 @@
    },
    "outputs": [],
    "source": [
-    "# for layer in vgg16_model.layers[15:25]:\n",
-    "#     layer.trainable = True\n",
+    "#to train conv block 5\n",
+    "for layer in vgg16_model.layers[15:]:\n",
+    "    layer.trainable = True\n",
     "\n",
-    "# vgg16_model.compile(optimizer=SGD(lr=1e-4,momentum=0.9), loss='categorical_crossentropy',metrics=['accuracy'])\n",
-    "# vgg16_model.fit_generator(train_generator,\n",
-    "#                     steps_per_epoch=nb_train_samples // batch_size,\n",
-    "#                     epochs=50,\n",
-    "#                     callbacks=[TensorBoard()],\n",
-    "#                     validation_data=validation_generator,\n",
-    "#                     validation_steps=nb_val_samples // batch_size,\n",
-    "#                     callbacks=[TensorBoard(log_dir='./logs/vgg16_fine_tune'),CSVLogger('vgg16_fine_tune')])\n",
+    "vgg16_model.compile(optimizer=SGD(lr=1e-4,momentum=0.9), loss='categorical_crossentropy',metrics=['accuracy'])\n",
+    "vgg16_model.fit_generator(train_generator,\n",
+    "                    steps_per_epoch=nb_train_samples // batch_size,\n",
+    "                    epochs=50,\n",
+    "                    callbacks=[TensorBoard()],\n",
+    "                    validation_data=validation_generator,\n",
+    "                    validation_steps=nb_val_samples // batch_size,\n",
+    "                    callbacks=[TensorBoard(log_dir='./logs/vgg16_fine_tune'),\n",
+    "                               CSVLogger('vgg16_fine_tune'),\n",
+    "                               EarlyStopping(patience=3)])\n",
     "\n",
-    "# vgg16_model.save_weights('vgg16_fine_tuning_weights.h5')"
+    "vgg16_model.save('vgg16_fine_tuning_model.h5')"
    ]
   },
   {
@@ -767,13 +749,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "vgg16_model(model,csv='vgg16_submission.csv')\n",
+    "print('test complete!')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -787,7 +770,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
