add vgg16 fine tuning code

--- a/distracted_driver_detection.ipynb
+++ b/distracted_driver_detection.ipynb
@@ -645,9 +645,9 @@
    "source": [
     "vgg16_base_model = VGG16(weights='imagenet', include_top=False)\n",
     "\n",
-    "vgg16_model = Sequential()\n",
-    "for layer in vgg16_base_model.layers:\n",
-    "    vgg16_model.add(layer)\n",
+    "# vgg16_model = Sequential()\n",
+    "# for layer in vgg16_base_model.layers:\n",
+    "#     vgg16_model.add(layer)\n",
     "\n",
     "top_model = Sequential()\n",
     "top_model.add(Flatten(input_shape=vgg16_model.output_shape[1:]))\n",
@@ -656,7 +656,8 @@
     "top_model.add(Dense(class_num, activation='softmax'))\n",
     "top_model.load_weights('vgg16_top_model_fc.h5')\n",
     "\n",
-    "vgg16_model.add(top_model)\n",
+    "# vgg16_model.add(top_model)\n",
+    "vgg16_model = Model(inputs=vgg16_base_model.input, outputs=top_model(vgg16_base_model.output))\n",
     "vgg16_model.summary()\n",
     "for i,layer in enumerate(vgg16_model.layers):\n",
     "    print(i,layer.name)"
@@ -697,12 +698,12 @@
     "                                    class_mode='categorical',\n",
     "                                    shuffle=False)\n",
     "\n",
-    "#frozen the first 18 layers of vgg16\n",
-    "for layer in vgg16_model.layers[:18]:\n",
+    "#frozen the first 15 layers of vgg16\n",
+    "for layer in vgg16_model.layers[:15]:\n",
     "    layer.trainable = False\n",
     "    \n",
     "vgg16_model.compile(loss='categorical_crossentropy',\n",
-    "                      optimizer=optimizers.SGD(lr=1e-4, momentum=0.9),\n",
+    "                      optimizer=optimizers.SGD(lr=1e-3, momentum=0.9,decay=1e-5,nesterov=True),\n",
     "                      metrics=['accuracy'])\n",
     "\n",
     "# fine-tune the model\n",
@@ -714,7 +715,9 @@
     "                        nb_val_samples=nb_validation_samples // batch_size,\n",
     "                        callbacks=[TensorBoard(log_dir='./logs/vgg16_fine_tune'),\n",
     "                                   CSVLogger('vgg16_fine_tune'),\n",
-    "                                   EarlyStopping(patience=3)])"
+    "                                   EarlyStopping(patience=3)])\n",
+    "\n",
+    "vgg16_model.save('vgg16_fine_tuning_model.h5')\n"
    ]
   },
   {
@@ -725,22 +728,22 @@
    },
    "outputs": [],
    "source": [
-    "#to train conv block 5\n",
-    "for layer in vgg16_model.layers[15:]:\n",
-    "    layer.trainable = True\n",
+    "# #frozen the first 15 layers of vgg16\n",
+    "# for layer in vgg16_model.layers[:15]:\n",
+    "#     layer.trainable = False\n",
     "\n",
-    "vgg16_model.compile(optimizer=SGD(lr=1e-4,momentum=0.9), loss='categorical_crossentropy',metrics=['accuracy'])\n",
-    "vgg16_model.fit_generator(train_generator,\n",
-    "                    steps_per_epoch=nb_train_samples // batch_size,\n",
-    "                    epochs=50,\n",
-    "                    callbacks=[TensorBoard()],\n",
-    "                    validation_data=validation_generator,\n",
-    "                    validation_steps=nb_val_samples // batch_size,\n",
-    "                    callbacks=[TensorBoard(log_dir='./logs/vgg16_fine_tune'),\n",
-    "                               CSVLogger('vgg16_fine_tune'),\n",
-    "                               EarlyStopping(patience=3)])\n",
+    "# vgg16_model.compile(optimizer=SGD(lr=1e-4,momentum=0.9), loss='categorical_crossentropy',metrics=['accuracy'])\n",
+    "# vgg16_model.fit_generator(train_generator,\n",
+    "#                     steps_per_epoch=nb_train_samples // batch_size,\n",
+    "#                     epochs=50,\n",
+    "#                     callbacks=[TensorBoard()],\n",
+    "#                     validation_data=validation_generator,\n",
+    "#                     validation_steps=nb_val_samples // batch_size,\n",
+    "#                     callbacks=[TensorBoard(log_dir='./logs/vgg16_fine_tune'),\n",
+    "#                                CSVLogger('vgg16_fine_tune'),\n",
+    "#                                EarlyStopping(patience=3)])\n",
     "\n",
-    "vgg16_model.save('vgg16_fine_tuning_model.h5')"
+    "# vgg16_model.save('vgg16_fine_tuning_model.h5')"
    ]
   },
   {
