--- a/distracted_driver_detection.ipynb
+++ b/distracted_driver_detection.ipynb
@@ -109,7 +109,7 @@
     "def generate_batches_data(dir_path, \n",
     "                    gen=image.ImageDataGenerator(), \n",
     "                    target_size=(224,224), \n",
-    "                    batch_size=32, \n",
+    "                    batch_size=128, \n",
     "                    class_mode='categorical', \n",
     "                    shuffle=False):\n",
     "    \n",
@@ -137,27 +137,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 0 images belonging to 0 classes.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test_datagen = image.ImageDataGenerator(rescale=1./255)\n",
-    "test_generator = generate_batches_data(\n",
-    "                                    dir_path=test_path,\n",
-    "                                    gen=test_datagen,\n",
-    "                                    target_size=image_size,\n",
-    "                                    batch_size=batch_size,                                    \n",
-    "                                    class_mode=None,\n",
-    "                                    shuffle=False)\n",
-    "\n"
+    "def image_preprocess(img_path):\n",
+    "\n",
+    "    img = image.load_img(img_path, target_size=(224, 224))\n",
+    "    img = image.img_to_array(img)\n",
+    "    img = np.expand_dims(img, axis=0)\n",
+    "    img = img / 255.0\n",
+    "    \n",
+    "    return img\n"
    ]
   },
   {
@@ -166,14 +157,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test_model(model,csv='sample_submission.csv'):\n",
+    "def test_model(model,test_path=test_path,csv='sample_submission.csv'):\n",
     "    columns = ['img', 'c0', 'c1', 'c2', 'c3', 'c4', 'c5', 'c6', 'c7', 'c8', 'c9']\n",
     "    df = pd.DataFrame(columns=columns)\n",
     "    \n",
-    "    y_pred = model.predict(test_generator,verbose=1)\n",
-    "\n",
-    "    for i,filename in enumerate(test_generator.filenames):\n",
-    "        df.loc[i] = [filename] + y_pred[i]\n",
+    "    file_list = os.listdir(test_path)\n",
+    "    for i,file in enumerate(file_list):\n",
+    "        test_data = image_preprocess(test_path + '/' + file)\n",
+    "        y_pred = model.predict(test_data,batch_size=1,verbose=0)\n",
+    "        df.loc[i] = [file] + y_pred\n",
     "        \n",
     "    df.to_csv(csv,index=None)"
    ]
@@ -712,7 +704,7 @@
     "                        samples_per_epoch=nb_train_samples // batch_size,\n",
     "                        epochs=50,\n",
     "                        validation_data=validation_generator,\n",
-    "                        nb_val_samples=nb_validation_samples // batch_size,\n",
+    "                        validation_steps=nb_val_samples // batch_size,\n",
     "                        callbacks=[TensorBoard(log_dir='./logs/vgg16_fine_tune'),\n",
     "                                   CSVLogger('vgg16_fine_tune'),\n",
     "                                   EarlyStopping(patience=3)])\n",
