--- a/inceptionV3.ipynb
+++ b/inceptionV3.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n",
+      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/matplotlib/__init__.py:962: UserWarning: Duplicate key in file \"/home/ubuntu/.config/matplotlib/matplotlibrc\", line #2\n",
+      "  (fname, cnt))\n",
+      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/matplotlib/__init__.py:962: UserWarning: Duplicate key in file \"/home/ubuntu/.config/matplotlib/matplotlibrc\", line #3\n",
+      "  (fname, cnt))\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import *\n",
     "from keras.layers import *\n",
@@ -21,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,9 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.5/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+      "87916544/87910968 [==============================] - 1s 0us/step\n"
+     ]
+    }
+   ],
    "source": [
     "base_model = InceptionV3(weights='imagenet', include_top=False)\n",
     "\n",
@@ -58,9 +81,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 18047 images belonging to 10 classes.\n",
+      "Found 4377 images belonging to 10 classes.\n"
+     ]
+    }
+   ],
    "source": [
     "train_datagen = image.ImageDataGenerator(rescale=1./255,\n",
     "                                         shear_range=0.2,\n",
@@ -94,15 +126,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "140/140 [==============================] - 470s 3s/step - loss: 1.5263 - acc: 0.5433 - val_loss: 2.8334 - val_acc: 0.1420\n",
+      "Epoch 2/10\n",
+      " 84/140 [=================>............] - ETA: 2:53 - loss: 1.2081 - acc: 0.6631"
+     ]
+    }
+   ],
    "source": [
     "for layer in base_model.layers:\n",
     "    layer.trainable = False\n",
     "\n",
     "# 编译模型（一定要在锁层以后操作）\n",
-    "model.compile(optimizer='rmsprop', loss='categorical_crossentropy')\n",
+    "model.compile(optimizer='rmsprop', loss='categorical_crossentropy',metrics=['accuracy'])\n",
     "\n",
-    "resNet50_model.fit_generator(\n",
+    "model.fit_generator(\n",
     "                        train_generator,\n",
     "                        steps_per_epoch=nb_train_samples // batch_size,\n",
     "                        epochs=10,\n",
@@ -154,7 +197,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -168,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
