train vgg16 again

--- a/train_validation_split.ipynb
+++ b/train_validation_split.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n",
+      "4\n",
+      "complete!\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -13,15 +22,6 @@
       "  (fname, cnt))\n",
       "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/matplotlib/__init__.py:962: UserWarning: Duplicate key in file \"/home/ubuntu/.config/matplotlib/matplotlibrc\", line #3\n",
       "  (fname, cnt))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "26\n",
-      "6\n",
-      "complete!\n"
      ]
     }
    ],
@@ -52,7 +52,7 @@
     "    if new_id != driver_id:\n",
     "        cnt += 1\n",
     "        driver_id = new_id\n",
-    "    if cnt > math.floor(num_of_driver * 0.2) :\n",
+    "    if cnt > 3:               #math.floor(num_of_driver * 0.2) :\n",
     "        break\n",
     "        \n",
     "    src_path += values[i][1] + '/'\n",
