get simple cnn predictions

--- a/vgg19.ipynb
+++ b/vgg19.ipynb
@@ -567,7 +567,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vgg19_model.save('vgg19_model_final.h5')"
+    "vgg19_model.save('vgg19_final_model.h5')"
    ]
   },
   {
@@ -576,7 +576,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vgg19_model = load_model('vgg19_model_final.h5')\n",
+    "vgg19_model = load_model('vgg19_final_model.h5')\n",
     "\n",
     "test_model(vgg19_model,test_path,csv='vgg19_submission.csv')"
    ]
