--- a/simple_cnn.ipynb
+++ b/simple_cnn.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n",
       "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/matplotlib/__init__.py:962: UserWarning: Duplicate key in file \"/home/ubuntu/.config/matplotlib/matplotlibrc\", line #2\n",
       "  (fname, cnt))\n",
@@ -32,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,6 +100,44 @@
     "#     model.compile(loss='categorical_crossentropy', optimizer=sgd)\n",
     "    \n",
     "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def image_preprocess(img_path):\n",
+    "\n",
+    "    img = image.load_img(img_path, target_size=(224, 224))\n",
+    "    img = image.img_to_array(img)\n",
+    "    img = np.expand_dims(img, axis=0)\n",
+    "    img = img / 255.0\n",
+    "    \n",
+    "    return img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_model(model,test_path,csv='sample_submission.csv'):\n",
+    "    columns = ['img', 'c0', 'c1', 'c2', 'c3', 'c4', 'c5', 'c6', 'c7', 'c8', 'c9']\n",
+    "    df = pd.DataFrame(columns=columns)\n",
+    "    \n",
+    "    file_list = os.listdir(test_path)\n",
+    "    for i,file in enumerate(file_list):\n",
+    "        test_data = image_preprocess(test_path + '/' + file)\n",
+    "        y_pred = model.predict(test_data,batch_size=1,verbose=0)\n",
+    "        y_pred = np.clip(y_pred,0.001,0.999)\n",
+    "        y_pred = y_pred[0].tolist()\n",
+    "        df.loc[i] = [file] + y_pred\n",
+    "\n",
+    "        \n",
+    "    df.to_csv(csv,index=None)"
    ]
   },
   {
@@ -413,6 +453,17 @@
    "outputs": [],
    "source": [
     "model.save('simple_cnn_final_model.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = load_model('simple_cnn_model.h5')\n",
+    "\n",
+    "test_model(model,test_path,csv='simple_cnn_submission.csv')"
    ]
   },
   {
