retrain vgg16 and vgg19

--- a/model_merge.ipynb
+++ b/model_merge.ipynb
@@ -2,23 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n",
-      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/matplotlib/__init__.py:962: UserWarning: Duplicate key in file \"/home/ubuntu/.config/matplotlib/matplotlibrc\", line #2\n",
-      "  (fname, cnt))\n",
-      "/home/ubuntu/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/matplotlib/__init__.py:962: UserWarning: Duplicate key in file \"/home/ubuntu/.config/matplotlib/matplotlibrc\", line #3\n",
-      "  (fname, cnt))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.models import *\n",
     "from keras.layers import *\n",
@@ -35,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,11 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ensenble_models(models,model_input):\n",
+    "def ensemble_models(models,model_input):\n",
     "    outputs = [model(model_input) for model in models]\n",
     "    \n",
     "    avrg = average(outputs)\n",
@@ -109,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -119,13 +105,13 @@
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_1 (InputLayer)            (None, 224, 224, 3)  0                                            \n",
+      "input_2 (InputLayer)            (None, 224, 224, 3)  0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "vgg16_model (Model)             (None, 10)           21207882    input_1[0][0]                    \n",
+      "vgg16_model (Model)             (None, 10)           21207882    input_2[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "vgg19_model (Model)             (None, 10)           26517578    input_1[0][0]                    \n",
+      "vgg19_model (Model)             (None, 10)           26517578    input_2[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "average_1 (Average)             (None, 10)           0           vgg16_model[1][0]                \n",
+      "average_2 (Average)             (None, 10)           0           vgg16_model[1][0]                \n",
       "                                                                 vgg19_model[1][0]                \n",
       "==================================================================================================\n",
       "Total params: 47,725,460\n",
@@ -146,14 +132,14 @@
     "\n",
     "model_input = Input(shape=models[0].input_shape[1:])\n",
     "\n",
-    "ensenble_model = ensenble_models(models,model_input)\n",
+    "ensemble_model = ensemble_models(models,model_input)\n",
     "\n",
-    "ensenble_model.summary()\n"
+    "ensemble_model.summary()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,42 +148,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "('The name \"conv2d_27_input\" is used 2 times in the model. All layer names should be unique. Layer names: ', ['conv2d_27_input', 'conv2d_27_input', 'conv2d_27', 'conv2d_27', 'batch_normalization_15', 'batch_normalization_15', 'max_pooling2d_24', 'max_pooling2d_24', 'conv2d_28', 'conv2d_28', 'batch_normalization_16', 'batch_normalization_16', 'max_pooling2d_25', 'max_pooling2d_25', 'conv2d_29', 'conv2d_29', 'batch_normalization_17', 'batch_normalization_17', 'max_pooling2d_26', 'max_pooling2d_26', 'flatten_9', 'flatten_9', 'dense_17', 'dense_17', 'batch_normalization_18', 'batch_normalization_18', 'dropout_11', 'dropout_11', 'dense_18', 'dense_18', 'average_8'])",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-59f5a9c7da84>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAverage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0moutput1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moutput2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0minput1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0minput2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0mmodel1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/keras/legacy/interfaces.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     89\u001b[0m                 warnings.warn('Update your `' + object_name +\n\u001b[1;32m     90\u001b[0m                               '` call to the Keras 2 API: ' + signature, stacklevel=2)\n\u001b[0;32m---> 91\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     92\u001b[0m         \u001b[0mwrapper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_original_function\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/tensorflow_p36/lib/python3.6/site-packages/keras/engine/topology.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, inputs, outputs, name)\u001b[0m\n\u001b[1;32m   1825\u001b[0m                                    \u001b[0;34m' times in the model. '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1826\u001b[0m                                    \u001b[0;34m'All layer names should be unique. '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1827\u001b[0;31m                                    'Layer names: ', all_names)\n\u001b[0m\u001b[1;32m   1828\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1829\u001b[0m         \u001b[0;31m# Layer parameters.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: ('The name \"conv2d_27_input\" is used 2 times in the model. All layer names should be unique. Layer names: ', ['conv2d_27_input', 'conv2d_27_input', 'conv2d_27', 'conv2d_27', 'batch_normalization_15', 'batch_normalization_15', 'max_pooling2d_24', 'max_pooling2d_24', 'conv2d_28', 'conv2d_28', 'batch_normalization_16', 'batch_normalization_16', 'max_pooling2d_25', 'max_pooling2d_25', 'conv2d_29', 'conv2d_29', 'batch_normalization_17', 'batch_normalization_17', 'max_pooling2d_26', 'max_pooling2d_26', 'flatten_9', 'flatten_9', 'dense_17', 'dense_17', 'batch_normalization_18', 'batch_normalization_18', 'dropout_11', 'dropout_11', 'dense_18', 'dense_18', 'average_8'])"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model1 = load_model('simple_cnn_final_model.h5')\n",
-    "model2= load_model('simple_cnn_final_model.h5')\n",
+    "# model1 = load_model('simple_cnn_final_model.h5')\n",
+    "# model2= load_model('simple_cnn_final_model.h5')\n",
     "\n",
-    "input1 = model1.input\n",
-    "input2 = model2.input\n",
+    "# input1 = model1.input\n",
+    "# input2 = model2.input\n",
     "\n",
-    "# layer1 = model1.get_layer(index=-2)\n",
-    "# layer2 = model2.get_layer(index=-2)\n",
+    "# # layer1 = model1.get_layer(index=-2)\n",
+    "# # layer2 = model2.get_layer(index=-2)\n",
     "\n",
-    "# avrg_layer = average([layer1,layer2])\n",
-    "# out = Dense(10, activation='softmax')(avrg_layer)\n",
-    "output1 = model1.output\n",
-    "output2 = model2.output\n",
+    "# # avrg_layer = average([layer1,layer2])\n",
+    "# # out = Dense(10, activation='softmax')(avrg_layer)\n",
+    "# output1 = model1.output\n",
+    "# output2 = model2.output\n",
     "\n",
-    "out = Average()([output1,output2])\n",
+    "# out = Average()([output1,output2])\n",
     "\n",
-    "model = Model(inputs=[input1,input2],outputs=out)\n",
-    "model1.summary()"
+    "# model = Model(inputs=[input1,input2],outputs=out)\n",
+    "# model1.summary()"
    ]
   },
   {
